TeamBattle fixes